--- a/application/package.json
+++ b/application/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "mongoose": "^6.8.2",
     "nodemon": "^2.0.20"
   }
 }
